src/objects/BHAT_Reviewer_Staff__c.object
<CustomObject>
    <description>BHAT</description>
    <fields>
        <fullName>Email__c</fullName>
        <formula>Staff__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_No__c</fullName>
        <formula>Staff__r.EmployeeNumber</formula>
        <label>Employee No</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Type__c</fullName>
        <formula>Staff__r.Employee_Type_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Employee Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reviewer__c</fullName>
        <label>Reviewer</label>
        <referenceTo>BHAT_Reviewer__c</referenceTo>
        <relationshipLabel>BHAT Reviewer Staff</relationshipLabel>
        <relationshipName>BHAT_Reviewer_Staff</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Staff_Division_Dept__c</fullName>
        <formula>Staff__r.Department</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Staff Division/Dept</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Staff__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Staff</label>
        <referenceTo>User</referenceTo>
        <relationshipName>BHAT_Reviewer_Staff</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <formula>Staff__r.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Title</label>
        <type>Text</type>
    </fields>
    <label>BHAT Reviewer Staff</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Reviewer__c</columns>
        <columns>Staff__c</columns>
        <columns>Title__c</columns>
        <columns>Staff_Division_Dept__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>RS-{0000}</displayFormat>
        <label>BHAT Reviewer Staff No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BHAT Reviewer Staff</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>